--- a/base_changed/skin_assistant/templates/Home.html
+++ b/base_changed/skin_assistant/templates/Home.html
@@ -6,8 +6,12 @@
 
 
 {% block contents %}
-
-
+<div class="login-box auth0-box before">
+	    <img src="https://i.cloudup.com/StzWWrY34s.png" />
+	        <h3>Auth0 Example</h3>
+		    <p>Zero friction identity infrastructure, built for developers</p>
+		        <a class="btn btn-primary btn-lg btn-login btn-block" href="/login">Log In</a>
+</div>
     <section class="u-clearfix u-palette-3-base u-section-1" id="carousel_0325">
       <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
         <div class="u-layout">
