--- a/base_changed/skin_assistant/templates/index.html
+++ b/base_changed/skin_assistant/templates/index.html
@@ -64,7 +64,13 @@
           </div>
         </nav>
       </div></header> 
-   
+      {%if usern%}
+      {{usern.name}}님 환영합니다.<button type="button" onclick="location.href='/logout'">로그아웃</button>
+      {% else %}
+      <div class="login-box auth0-box before">
+        <a class="btn btn-primary btn-lg btn-login btn-block" href="/login">Log In</a>
+      </div>
+      {% endif %}
     {% block contents %}
 
     {% endblock contents %}
