--- a/base_changed/skin_assistant/templates/index.html
+++ b/base_changed/skin_assistant/templates/index.html
@@ -47,6 +47,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="{{url_for('graph')}}" style="padding: 10px 20px;">Graph</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="{{url_for('photo')}}" style="padding: 10px 20px;">Photo</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="{{url_for('product')}}" style="padding: 10px 20px;">Product</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="{{url_for('mypage')}}" style="padding: 10px 20px;">Mypage</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -57,6 +58,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="{{url_for('graph')}}" style="padding: 10px 20px;">Graph</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="{{url_for('photo')}}" style="padding: 10px 20px;">Photo</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="{{url_for('product')}}" style="padding: 10px 20px;">Product</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="{{url_for('mypage')}}" style="padding: 10px 20px;">Mypage</a>
 </li></ul>
               </div>
             </div>
