--- a/UI/base_changed/skin_assistant/templates/Product.html
+++ b/UI/base_changed/skin_assistant/templates/Product.html
@@ -1,12 +1,11 @@
-{% extends "base.html" %}
+{% extends "index.html" %}
 
 
 {% block contents %}
 
 <div>
-    <img src = "/static/img/cosmetic1.jpg">
-    <img src = "/static/img/cosmetic2.jpg">
-    <img src = "/static/img/cosmetic3.jpg">
+    <table>
+        <td>하이</td>
+    </table>
 </div>
-
 {% endblock contents %}
