--- a/skin_assistant/templates/Graph.html
+++ b/skin_assistant/templates/Graph.html
@@ -1,7 +1,9 @@
 {% extends "index.html" %}
 
 {% block head %}
-
+<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.3.0/chart.min.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="{{url_for('static', filename='css/graph.css')}}" media="screen">
 <script src="https://cdn.anychart.com/releases/8.7.1/js/anychart-core.min.js"></script>
 <script src="https://cdn.anychart.com/releases/8.7.1/js/anychart-heatmap.min.js"></script>
@@ -114,7 +116,73 @@
       </div>
     </section>
     <section class="u-align-left u-clearfix u-section-3" id="sec-13ed">
-    
+      <div class ="container">
+        <div class="row">
+            <div class="'col-md-6"style="width:47%;">
+                <canvas id="myChartOne"></canvas>
+            </div>
+            <div class="'col-md-6" style="width:53%;">
+                <canvas id="myChartTwo"></canvas>
+            </div>
+        </div>
+    </div>
+<script>
+    let myChartOne = document.getElementById('myChartOne').getContext('2d');
+    let myChartTwo = document.getElementById('myChartTwo').getContext('2d');
+
+
+<!-- 1주일 bar 그래프-->
+    let barChart= new Chart(myChartOne, {
+        type : 'bar',
+        data:{
+            labels:{{ day2 | tojson }},
+            datasets : [{
+                label : 'papule',
+                data : {{ value2 | tojson}},
+                backgroundColor:'rgba(206,29,22,.5)',
+                borderWidth:1,
+                borderColor: "red",
+                hoverBackgroundColor:"red"
+            }
+            ,
+            {
+                label : 'pustula',
+                data : {{ value3 | tojson }},
+                backgroundColor:'rgba(40,161,130,.5)',
+                borderWidth:1,
+                borderColor: "green",
+                hoverBackgroundColor:"green"
+            }]
+        }
+    });
+
+<!--1달 line 그래프-->
+    let barChartTwo= new Chart(myChartTwo,{
+        type : 'line',
+        data:{
+            labels:{{ day4 | tojson }},
+            datasets : [{
+                label : 'papule',
+                data : {{ value4 | tojson}},
+                borderWidth:2,
+                borderColor: "rgba(206,29,22,.5)",
+                hoverBackgroundColor:"red",
+                fill: false,
+
+
+            },
+            {
+                label : 'pustula',
+                data : {{ value5 | tojson}},
+                borderWidth:2,
+                borderColor: "rgba(40,161,130,.5)",
+                hoverBackgroundColor:"green",
+                fill: false,
+
+            }]
+        }
+    });
+</script>
     </section>
     <h2 align='center'>[한달 기록]</h2>
     <div id="container1" ></div>
