--- a/skin_assistant/templates/Graph.html
+++ b/skin_assistant/templates/Graph.html
@@ -160,7 +160,7 @@
             }]
         }
     });
-
+</script>
     <h2 align='center'>[한달 기록]</h2>
     <div align='center' style="font-size: xx-small;">-왼쪽 상단이 가장 최근 기록입니다-<div>
 
