--- a/skin_assistant/templates/Product.html
+++ b/skin_assistant/templates/Product.html
@@ -26,7 +26,7 @@ table {
 
 			   <tr align="center" style="border-bottom: 700px;">
 				       <td colspan='1'style="border-bottom: 700px;font-size:larger;color:white;">
-					               <p><span style="border-radius: 15px 15px 15px 15px; border: 3px solid; padding: 0.2em 0.2em;background-color: black;border-color: black;">&nbsp;&nbsp;스킨/토너&nbsp&nbsp;</span></p>
+					               <p><span style="border-radius: 15px 15px 15px 15px; border: 3px solid; padding: 0.2em 0.2em;background-color: black;border-color: black;">&nbsp;&nbsp;{{c1}}&nbsp&nbsp;</span></p>
 						           </td>
 							     </tr>
 
@@ -68,7 +68,7 @@ table {
 
 					        <tr align="center" style="border-bottom: 700px;">
 							        <td colspan='1'style="border-bottom: 700px;font-size:larger;color:white;">
-									            <p><span style="border-radius: 15px 15px 15px 15px; border: 3px solid; padding: 0.2em 0.2em;background-color: black;border-color: black;">&nbsp;&nbsp;로션/에멀젼&nbsp&nbsp;</span></p>
+									            <p><span style="border-radius: 15px 15px 15px 15px; border: 3px solid; padding: 0.2em 0.2em;background-color: black;border-color: black;">&nbsp;&nbsp;{{c2}}&nbsp&nbsp;</span></p>
 										            </td>
 											          </tr>
 												   
@@ -108,7 +108,7 @@ table {
 																																																          <table category3 style="margin-bottom: 100px;">
 																																																		          <tr align="center" style="border-bottom: 700px;">
 																																																				              <td colspan='1'style="border-bottom: 700px;font-size:larger;color:white;">
-																																																						                      <p><span style="border-radius: 15px 15px 15px 15px; border: 3px solid; padding: 0.2em 0.2em;background-color: black;border-color: black;">&nbsp;&nbsp;에센스/세럼&nbsp&nbsp;</span></p>
+																																																						                      <p><span style="border-radius: 15px 15px 15px 15px; border: 3px solid; padding: 0.2em 0.2em;background-color: black;border-color: black;">&nbsp;&nbsp;{{c3}}&nbsp&nbsp;</span></p>
 																																																								                  </td>
 																																																										            </tr>
 																																																											                <tr>
