--- a/skin_assistant/templates/Graph.html
+++ b/skin_assistant/templates/Graph.html
@@ -109,10 +109,13 @@
       <div class="'col-md-6"style="width:47%;">
           <canvas id="myChartOne"></canvas>
       </div>
+  </div>
+  <div class="row">
       <div class="'col-md-6" style="width:53%;">
           <canvas id="myChartTwo"></canvas>
       </div>
-  </div>
+    </div>
+  
 </div>
 <script>
     let myChartOne = document.getElementById('myChartOne').getContext('2d');
